manifests/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app.kubernetes.io/name: homepage
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      nodeSelector:
        node-role.kubernetes.io/worker: "worker"
      dnsConfig:
        options:
        - name: ndots
          value: "1"
        - name: timeout
          value: "2"
        - name: attempts
          value: "3"
      containers:
      - name: homepage
        image: ghcr.io/gethomepage/homepage:v2.5.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /app/config
        - name: logs
          mountPath: /app/config/logs
        livenessProbe:
          httpGet:
            path: /api/healthcheck
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/healthcheck
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            memory: 256Mi
      volumes:
      - name: config-tmp
        configMap:
          name: homepage-config
      - name: config
        emptyDir: {}
      - name: logs
        emptyDir: {}
